==> 1guicai/stm32-shijian-project/env_monitor/Hardware/MySPI.c <==
#include "stm32f10x.h"
void MySPI_W_SS(uint8_t v)  { GPIO_WriteBit(GPIOA,GPIO_Pin_4,(BitAction)v); }
void MySPI_W_SCK(uint8_t v) { GPIO_WriteBit(GPIOA,GPIO_Pin_5,(BitAction)v); }
void MySPI_W_MOSI(uint8_t v){ GPIO_WriteBit(GPIOA,GPIO_Pin_7,(BitAction)v); }
uint8_t MySPI_R_MISO(void)  { return GPIO_ReadInputDataBit(GPIOA,GPIO_Pin_6); }
void MySPI_Init(void)
{
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);
	GPIO_InitTypeDef G;
	G.GPIO_Mode = GPIO_Mode_Out_PP;
	G.GPIO_Pin = GPIO_Pin_4 | GPIO_Pin_5 | GPIO_Pin_7;
	G.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOA, &G);
	G.GPIO_Mode = GPIO_Mode_IPU;
	G.GPIO_Pin = GPIO_Pin_6;
	GPIO_Init(GPIOA, &G);
	MySPI_W_SS(1); MySPI_W_SCK(0);
}
void MySPI_Start(void){ MySPI_W_SS(0); }
void MySPI_Stop(void) { MySPI_W_SS(1); }
uint8_t MySPI_SwapByte(uint8_t ByteSend)
{
	uint8_t i,R=0x00;
	for(i=0;i<8;i++)
	{
		MySPI_W_MOSI(!!(ByteSend&(0x80>>i)));
		MySPI_W_SCK(1);
		if(MySPI_R_MISO()) R|=(0x80>>i);
		MySPI_W_SCK(0);
	}
	return R;
}
